[package]
name = "avenger-chart"
version = "0.1.0"
edition = "2021"

[dependencies]
avenger-common = { path = "../avenger-common" }
avenger-scales = { path = "../avenger-scales" }
avenger-scenegraph = { path = "../avenger-scenegraph" }
avenger-geometry = { path = "../avenger-geometry" }
avenger-text = { path = "../avenger-text" }
avenger-guides = { path = "../avenger-guides" }
avenger-eventstream = { path = "../avenger-eventstream" }

datafusion = { workspace = true }
arrow = { workspace = true }
tokio = { workspace = true, default-features = false }
lazy_static = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
palette = { workspace = true }
indexmap = { workspace = true }
async-recursion = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
ordered-float = { workspace = true }

[dev-dependencies]
avenger-wgpu = { path = "../avenger-wgpu" }
