[package]
name = "avenger-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "avenger"
path = "src/main.rs"

[dependencies]
avenger-app = { path = "../avenger-app" }
avenger-common = { path = "../avenger-common" }
avenger-eventstream = { path = "../avenger-eventstream" }
avenger-geometry = { path = "../avenger-geometry" }
avenger-lang = { path = "../avenger-lang" }
avenger-scenegraph = { path = "../avenger-scenegraph" }
avenger-wgpu = { path = "../avenger-wgpu" }
avenger-winit-wgpu = { path = "../avenger-winit-wgpu" }

tokio = { version = "*", features = ["rt", "rt-multi-thread", "macros"] }
async-trait = { workspace = true }
clap = { version = "4.5.2", features = ["derive"] }
env_logger = "0.11.2"
log = "0.4"
winit = { workspace = true }
