[package]
name = "avenger-eventstream"
version = "0.1.0"
edition = "2021"

[features]
default = ["winit_support"]
winit_support = ["dep:winit"]

[dependencies]
avenger-common = { path = "../avenger-common" }
avenger-scenegraph = { path = "../avenger-scenegraph" }
avenger-geometry = { path = "../avenger-geometry" }
winit = { workspace = true, optional = true }
async-trait = { workspace = true }
