[package]
name = "avenger-guides"
version = "0.1.0"
edition = "2021"

[dependencies]
avenger-scales3 = { path = "../avenger-scales3" }
avenger-common = { path = "../avenger-common" }
avenger-scenegraph = { path = "../avenger-scenegraph" }
avenger-text = { path = "../avenger-text" }
avenger-geometry = { path = "../avenger-geometry" }
arrow = { workspace = true }
datafusion-common = { workspace = true }
thiserror = { workspace = true }
itertools = { workspace = true }
geo = { workspace = true }
rstar = { workspace = true }
