[package]
name = "avenger-image"
version = "0.1.0"
edition = "2021"

[features]
default = ["svg", "image-request"]
svg = [ "resvg", "usvg", "tiny-skia",]
image-request = [ "reqwest",]

[dependencies]
thiserror = { workspace = true }
image = { workspace = true }
serde = { workspace = true }
cfg-if = { workspace = true }
lazy_static = { workspace = true }

reqwest = { workspace = true, optional = true, features = ["blocking"] }
resvg = { workspace = true, optional = true }
usvg = { workspace = true, optional = true }
tiny-skia = { workspace = true, optional = true }
