[package]
name = "avenger-lang"
version = "0.1.0"
edition = "2024"

[dependencies]
avenger-scenegraph = { path = "../avenger-scenegraph" }
avenger-scales = { path = "../avenger-scales" }
avenger-common = { path = "../avenger-common" }

thiserror = { workspace = true }
async-trait = { workspace = true }
sqlparser = { workspace = true, features = ["visitor"] }
datafusion = { workspace = true }
datafusion-common = { workspace = true }
datafusion-sql = { workspace = true }

lazy_static = { workspace = true }
arrow-schema = { workspace = true }
tokio = { workspace = true }
indexmap = { workspace = true }
petgraph = "0.8.1"
futures = { workspace = true }
async-recursion = "1.1.1"
lru = "0.14.0"

[dev-dependencies]
image = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }
pixelmatch = "0.1"
tokio = { workspace = true, features = ["rt-multi-thread"] }
arrow = { workspace = true }
avenger-wgpu = { path = "../avenger-wgpu" }
anyhow = { workspace = true }

[[bench]]
name = "context_bench"
harness = false
