[package]
name = "avenger-lang2"
version = "0.1.0"
edition = "2024"

[dependencies]
# tree-sitter-avenger = "0.0.4"
tree-sitter-avenger = { path = "/Users/jonmmease/VegaFusion/repos/tree-sitter-avenger" }
# ts-typed-ast = "0.1"
tree-sitter = "0.25.3"
check_keyword = "0.2"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
heck = "0.4"
thiserror = { workspace = true }

ariadne = "0.5.1"
sqlparser = { workspace = true }
regex = "1"
lazy_static = { workspace = true }

[build-dependencies]
# tree-sitter-avenger = "0.0.4"
tree-sitter-avenger = { path = "/Users/jonmmease/VegaFusion/repos/tree-sitter-avenger" }
# ts-typed-ast = "0.1"
tree-sitter = "0.25.3"
check_keyword = "0.2"
heck = "0.4"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
