[project]
name = "avenger"
version = "0.0.7"
readme = "README.md"
description = "A Visualization Engine and Renderer"

[build-system]
requires = [ "maturin>=1.1.0,<2",]
build-backend = "maturin"

[project.license]
file = "LICENSE"

[tool.maturin]
module-name = "avenger._avenger"

[project.entry-points."altair.vegalite.v5.renderer"]
avenger-png = "avenger.altair_utils:avenger_png_renderer"
avenger-html = "avenger.altair_utils:avenger_html_renderer"
