[package]
name = "avenger-scales"
version = "0.1.0"
edition = "2021"

[dependencies]
avenger-common = { path = "../avenger-common" }
avenger-text = { path = "../avenger-text" }
avenger-image = { path = "../avenger-image" }
thiserror = { workspace = true }
palette = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
indexmap = { workspace = true }
ordered-float = { workspace = true }
float-cmp = "0.10.0"

arrow = { workspace = true }
datafusion-common = { workspace = true }
numfmt = "1.1"
css-color-parser = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
paste = { workspace = true }
strum = { workspace = true }

[dev-dependencies]
float-cmp = "0.10.0"
