[package]
name = "avenger-scales2"
version = "0.1.0"
edition = "2021"

[features]
default = ["temporal"]
temporal = ["dep:chrono", "dep:chrono-tz"]

[dependencies]
avenger-common = { path = "../avenger-common" }
thiserror = { workspace = true }
palette = { workspace = true }
chrono = { workspace = true, optional = true }
chrono-tz = { workspace = true, optional = true }
indexmap = { workspace = true }
ordered-float = { workspace = true }
float-cmp = "0.10.0"

[dev-dependencies]
float-cmp = "0.10.0"