[package]
name = "avenger-scenegraph"
version = "0.0.8"
edition = "2021"
description = "A visualization engine and renderer"
license = "BSD-3-Clause"

[dependencies.thiserror]
workspace = true

[dependencies.serde]
workspace = true
features = [ "rc",]

[dependencies.lyon_extra]
workspace = true

[dependencies.lyon_path]
workspace = true
features = [ "serialization",]

[dependencies.lyon_algorithms]
workspace = true

[dependencies.image]
workspace = true
features = [ "png",]

[dependencies.pyo3]
workspace = true
optional = true

[dependencies.itertools]
workspace = true

[dependencies.rstar]
workspace = true

[dependencies.ordered-float]
workspace = true

[dependencies.avenger-common]
path = "../avenger-common"

[dependencies.avenger-image]
path = "../avenger-image"
default-features = false

[dependencies.avenger-text]
path = "../avenger-text"
default-features = false
features = ["serde"]

[dev-dependencies]
float-cmp = "0.10.0"
geo = { workspace = true }
geo-svg = { workspace = true }

[dev-dependencies.avenger-text]
path = "../avenger-text"
default-features = false
features = ["cosmic-text"]

[dev-dependencies.avenger-geometry]
path = "../avenger-geometry"
