[package]
name = "avenger-vega-renderer"
version = "0.0.8"
edition = "2021"

[lib]
crate-type = [ "cdylib", "rlib",]

[features]
deno = [ "avenger-wgpu/deno", "wgpu/webgpu",]
default = [ "wgpu/webgl",]

[dependencies]
lazy_static = "1.4.0"
serde_json = "1.0.114"
csscolorparser = "0.7.0"
lyon_path = "*"
itertools = "0.13.0"
wasm-bindgen-futures = "0.4.42"
serde-wasm-bindgen = "0.6.5"
js-sys = "0.3.69"
unicode-segmentation = "*"

[dependencies.console_error_panic_hook]
version = "0.1.1"

[dependencies.avenger-vega]
path = "../avenger-vega"
version = "0.0.8"

[dependencies.avenger-scenegraph]
path = "../avenger-scenegraph"
version = "0.0.8"

[dependencies.avenger-wgpu]
path = "../avenger-wgpu"
default-features = false
version = "0.0.8"

[dependencies.wgpu]
workspace = true
default-features = false
features = [ "wgsl",]

[dependencies.wasm-bindgen]
version = "0.2.95"

[dependencies.gloo-utils]
version = "0.2.0"
features = [ "serde",]

[dependencies.web-sys]
version = "0.3.69"
features = [ "Document", "Window", "Element", "Performance", "OffscreenCanvas", "OffscreenCanvasRenderingContext2d", "TextMetrics", "ImageData",]

[dependencies.image]
workspace = true
default-features = false
features = [ "png",]
