[package]
name = "avenger-vega"
version = "0.0.8"
edition = "2021"
description = "Utilities for importing Vega scenegraphs into Avenger"
license = "BSD-3-Clause"

[features]
image-request = [ "reqwest",]
svg = [ "resvg", "usvg", "tiny-skia",]

[dependencies]
cfg-if = "1"
csscolorparser = "0.6.2"

[dependencies.resvg]
version = "0.38.0"
optional = true

[dependencies.usvg]
version = "0.38.0"
optional = true

[dependencies.tiny-skia]
version = "0.11.3"
optional = true

[dependencies.lazy_static]
workspace = true

[dependencies.tracing]
workspace = true

[dependencies.avenger]
path = "../avenger"
version = "0.0.8"

[dependencies.thiserror]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.serde_json]
version = "1.0.111"

[dependencies.lyon_extra]
workspace = true

[dependencies.lyon_path]
workspace = true
features = [ "serialization",]

[dependencies.image]
workspace = true
default-features = false
features = [ "png",]

[dependencies.reqwest]
version = "0.11.23"
features = [ "blocking", "rustls",]
optional = true

[dependencies.pyo3]
workspace = true
optional = true
