[package]
name = "avenger-wgpu"
version = "0.0.8"
edition = "2021"
description = "WGPU rendering engine for the Avenger visualization framework"
license = "BSD-3-Clause"
repository = "https://github.com/jonmmease/avenger"

[lib]
crate-type = [ "cdylib", "rlib",]

[features]
default = [ "cosmic-text", "rayon",]
cosmic-text = [ "dep:cosmic-text", "lazy_static",]
deno = []

[dependencies]
cfg-if = "1"
winit = { workspace = true }
env_logger = "0.10"
log = "0.4"
wgpu = { workspace = true }
pollster = "0.3"
cgmath = "0.18.0"
itertools = "0.13.0"
image = { workspace = true }
futures-intrusive = "^0.5"
etagere = "0.2.10"
colorgrad = "0.6.2"

[dev-dependencies]
dssim = "3.2.4"
rstest = "0.18.2"

[dependencies.avenger]
path = "../avenger"
version = "0.0.8"

[dependencies.rayon]
workspace = true
optional = true

[dependencies.tracing]
workspace = true

[dependencies.thiserror]
workspace = true

[dependencies.bytemuck]
version = "1.14"
features = [ "derive",]

[dependencies.lazy_static]
workspace = true
optional = true

[dependencies.pyo3]
workspace = true
optional = true

[dependencies.cosmic-text]
version = "0.12.1"
optional = true

[dependencies.lyon]
workspace = true

[dev-dependencies.avenger-vega]
path = "../avenger-vega"
features = [ "image-request", "svg",]
version = "0.0.8"

[dev-dependencies.serde_json]
version = "1.0.111"

[target."cfg(target_arch = \"wasm32\")".dependencies.wgpu]
version = "23.0.1"
default-features = false

[target."cfg(target_arch = \"wasm32\")".dependencies.web-sys]
version = "0.3.67"
features = [ "Document", "Window", "Element", "HtmlCanvasElement",]
